--- a/Website/Web.config
+++ b/Website/Web.config
@@ -3,11 +3,11 @@
 
   <appSettings>
     <add key="blog:theme" value="OneColumn"/>
-    <add key="blog:name" value="MiniBlog"/>
-    <add key="blog:description" value="I write about web development in ASP.NET and Visual Studio"/>
+    <add key="blog:name" value="Nathan Laan"/>
+    <add key="blog:description" value="Software Development. Software Design. Team Leadership."/>
     <add key="blog:image" value="https://github.global.ssl.fastly.net/images/modules/logos_page/Octocat.png"/>
     <add key="blog:postsPerPage" value="5"/>
-    <add key="blog:daysToComment" value="999"/>
+    <add key="blog:daysToComment" value="0"/>
     <add key="blog:moderateComments" value="true"/>
     <add key="blog:email" value="mail@example.com"/>
     <add key="PreserveLoginUrl" value="true"/>
