--- a/Website/Web.config
+++ b/Website/Web.config
@@ -4,7 +4,7 @@
   <appSettings>
     <add key="blog:theme" value="OneColumn"/>
     <add key="blog:name" value="Nathan Laan"/>
-    <add key="blog:description" value="Software Development. Software Design. Team Leadership."/>
+    <add key="blog:description" value=""/>
     <add key="blog:image" value="https://github.global.ssl.fastly.net/images/modules/logos_page/Octocat.png"/>
     <add key="blog:postsPerPage" value="5"/>
     <add key="blog:daysToComment" value="0"/>
