Updated templates to hide comments.

--- a/Website/Web.config
+++ b/Website/Web.config
@@ -47,7 +47,7 @@
 
     <handlers>
       <remove name="CommentHandler"/>
-      <add name="CommentHandler" verb="*" type="CommentHandler" path="/comment.ashx"/>
+      <!--<add name="CommentHandler" verb="*" type="CommentHandler" path="/comment.ashx"/>-->
       <remove name="PostHandler"/>
       <add name="PostHandler" verb="POST" type="PostHandler" path="/post.ashx"/>
       <remove name="MetaWebLogHandler"/>
